--- a/BarnesHutGalaxyCUDA/BarnesHutGalaxyCUDA.vcxproj.filters
+++ b/BarnesHutGalaxyCUDA/BarnesHutGalaxyCUDA.vcxproj.filters
@@ -9,9 +9,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CommonCelestials.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Galaxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -25,6 +22,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UniverseSim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cuda_computes.cuh">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QuadTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -44,8 +56,16 @@
     <ClCompile Include="UniverseSim.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QuadTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="Universe.cu" />
+    <CudaCompile Include="Universe.cpp">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="cuda_computes.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
   </ItemGroup>
 </Project>
